--- a/plain/Cargo.toml
+++ b/plain/Cargo.toml
@@ -6,5 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linearf = { path = "../../linearf/model/core" }
-async-trait = "*"
+linearf = { path = "../../lnf/model/core" }
