--- a/plain/Cargo.toml
+++ b/plain/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linearf = { path = "../../lnf/model/core" }
+linearf = { git = "https://github.com/octaltree/linearf", branch = "dev" }
