--- a/rustdoc/Cargo.toml
+++ b/rustdoc/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 
 [dependencies]
 rustdoc-index = "0.2.0"
-linearf = { path = "../../lnf/model/core" }
+linearf = { git = "https://github.com/octaltree/linearf", branch = "dev" }
