--- a/state/Cargo.toml
+++ b/state/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "state"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linearf = { git = "https://github.com/octaltree/linearf" }
+linearf = { path = "../../lnf/model/core" }
+serde = "1"
