--- a/plain/Cargo.toml
+++ b/plain/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "plain"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-stream = "0.3.2"
 linearf = { path = "../../lnf/model/core" }
+serde = "^1"
