--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -8,3 +8,4 @@ linearf = { path = "../../lnf/model/core" }
 serde = "^1"
 tokio = { version = "^1", features = ["fs", "process", "io-util"] }
 tokio-stream = { version = "^0.1", features = ["io-util"] }
+futures = "^0.3"
