--- a/plain/Cargo.toml
+++ b/plain/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "plain"
-version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "flavors_plain"
+version = "0.1.0"
 
 [dependencies]
 linearf = { path = "../../lnf/model/core" }
