--- a/clap/Cargo.toml
+++ b/clap/Cargo.toml
@@ -5,7 +5,6 @@ version = "0.1.0"
 
 [dependencies]
 linearf = { path = "../../lnf/model/core" }
-printer = { git = "https://github.com/liuchengxu/vim-clap" }
-filter = { git = "https://github.com/liuchengxu/vim-clap", default-features = false }
+filter = { git = "https://github.com/liuchengxu/vim-clap", rev = "6fd4feca", default-features = false }
 futures = "^0.3"
 serde = "^1"
